Fix page overflow

--- a/src/css/generic/page.css
+++ b/src/css/generic/page.css
@@ -3,7 +3,6 @@ html, body {
   font-family: 'Graphik';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow-x: hidden;
 }
 
 body {
